# ambassador

django-ambassador/: .gitignore  Dockerfile  admin.http  docker-compose.yaml  pyproject.toml  requirements.txt
django-ambassador/administrator/: serializers.py  urls.py  views.py
django-ambassador/app/: settings.py  urls.py
django-ambassador/common/: authentication.py  serializers.py  urls.py  views.py
django-ambassador/core/: admin.py  models.py
django-ambassador/core/management/commands/: populate_ambassadors.py  wait_for_db.py
django-ambassador/core/migrations/: 0001_initial.py
