[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Helena Oliveira", email = "helena@informach.com.br"},
]
dependencies = [
    "django>=4.0.5",
    "djangorestframework>=3.13.1",
    "mysqlclient>=2.1.0",
    "django-mysql>=4.7.0",
    "django-cors-headers>=3.13.0",
    "PyJWT>=2.4.0",
    "Faker>=13.12.0",
    "django-redis>=5.2.0",
    "stripe>=3.2.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=4.0.1",
    "black>=22.3.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
